--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^7.3.0",
     "immer": "^9.0.15",
     "json-server": "^0.17.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
