--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
+  "scripts": {   
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mockserver": "npx json-server --watch --delay 500 --port 3001 db.json",
-    "dev": "concurrently \"yarn start\" \"yarn mockserver\""
+    "build": "CI=false react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn run build"
+
   },
   "eslintConfig": {
     "extends": [
